# chafonlib

./: CMakeLists.txt  README.md
include/chafon-reader/: commands.h  reader.h
include/chafonlib/: commands.h  reader.h
src/: main.c  reader.c  reader.h
test/: master.c
tests/: CMakeLists.txt  commands.c
